{
    "name": "MouseControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "2925a955-3c52-4183-b888-1f8a6c39dd91",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "40f8a702-3b0b-4176-9118-f89e15bf5838",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DownLeft",
                    "type": "Button",
                    "id": "838a9734-0a2f-4657-98cd-e785088c6730",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownRight",
                    "type": "Button",
                    "id": "d283b3d4-7d03-4576-bf67-8325e0e4d4d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownMiddle",
                    "type": "Button",
                    "id": "b33c0c39-ac85-4af7-b76d-1ba14a09e205",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpLeft",
                    "type": "Button",
                    "id": "c342221a-882d-4fbd-97fe-cebf092118c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpRight",
                    "type": "Button",
                    "id": "bdbbd84c-451b-4904-af29-4ca04a3dabf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpMiddle",
                    "type": "Button",
                    "id": "88a5bbcb-6691-426e-a1da-7ed665d7eb8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Id",
                    "type": "Value",
                    "id": "39c4196e-4602-4f51-9476-676e20275e7b",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Delta",
                    "type": "PassThrough",
                    "id": "fd1a4bbd-a9ea-442e-b5e7-0541eb8f4731",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "01f8ce69-e73b-4ae5-b256-47ec7980f2a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c89d810-db90-42c2-b3cf-e4fea37cd438",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "389d8639-971d-42df-b88d-2389bd4ed50e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "DownLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b3ef73a-5203-4a35-a36b-4c534ee1f82b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "UpLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b064bd87-4e3d-4fa8-b61d-0e110ba35b7d",
                    "path": "<Mouse>/pointerId",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Id",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fa18843-1ece-46b2-afa1-163e77647f22",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5c6a749-ba81-402f-abfc-7e79c610e4f6",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "840d9c84-7b63-4604-88ff-ca9a9a15076f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "DownRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0a5a66e-5ea3-476c-924c-e6ad91156207",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "UpRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55155f21-95ba-4915-9ec2-600be95d736c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "DownMiddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19d3ea2f-6f34-49c2-a16f-042a523dfed7",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "UpMiddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}